update error-prone, patterns, and compiler config