@@ -54,7 +54,7 @@
     <dep.commons-lang.version>3.12.0</dep.commons-lang.version>
     <dep.commons-pool2.version>2.11.1</dep.commons-pool2.version>
     <dep.dropwizard.metrics.version>4.2.4</dep.dropwizard.metrics.version>
-    <dep.errorprone.version>2.10.0</dep.errorprone.version>
+    <dep.errorprone.version>2.24.1</dep.errorprone.version>
     <dep.gson.version>2.8.9</dep.gson.version>
     <dep.guava.version>32.0.0-jre</dep.guava.version>
     <dep.httpclient.version>5.2.1</dep.httpclient.version>
@@ -1429,36 +1429,32 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
               <encoding>UTF-8</encoding>
-              <showWarnings>true</showWarnings>
               <fork>true</fork>
+              <release>${maven.compiler.release}</release>
+              <showWarnings>true</showWarnings>
               <compilerArgs>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                <!--arg>-Werror</arg-->
+                <!--arg>-Xlint:all</arg-->
                 <arg>-XDcompilePolicy=simple</arg>
                 <arg>-Xplugin:ErrorProne \
-                  -Xmaxwarns 5000 \
-                  -XepDisableWarningsInGeneratedCode \
                   -XepAllDisabledChecksAsWarnings \
-                  -Xep:Var:OFF \
-                  -Xep:ConstantField:WARN \
-                  -Xep:RemoveUnusedImports:WARN \
-                  -Xep:WildcardImport:WARN \
-                  -Xep:ArrayToString:WARN \
-                  -Xep:ComparisonOutOfRange:WARN \
-                  -Xep:DeadException:WARN \
-                  -Xep:DefaultCharset:OFF \
-                  -Xep:DepAnn:WARN \
-                  -Xep:FormatString:WARN \
-                  -Xep:LongLiteralLowerCaseSuffix:WARN \
-                  -Xep:MethodCanBeStatic:WARN \
-                  -Xep:MixedArrayDimensions:WARN \
-                  -Xep:MultiVariableDeclaration:WARN \
-                  -Xep:MultipleTopLevelClasses:WARN \
-                  -Xep:NumericEquality:WARN \
-                  -Xep:PrivateConstructorForUtilityClass:WARN \
-                  -Xep:ThrowsUncheckedException:WARN \
-                  -Xep:TryFailThrowable:WARN \
-                  -Xep:Java7ApiChecker:OFF \
+                  -XepAllErrorsAsWarnings \
+                  -XepAllSuggestionsAsWarnings \
+                  -XepDisableWarningsInGeneratedCode \
                   -Xep:AndroidJdkLibsChecker:OFF \
-                  -Xep:InlineMeSuggester:OFF</arg>
+                  -Xep:DefaultCharset:OFF \
+                  -Xep:InlineMeSuggester:OFF \
+                  -Xep:InlineTrivialConstant:OFF \
+                  -Xep:Java7ApiChecker:OFF \
+                  -Xep:Java8ApiChecker:OFF \
+                  -Xep:UnnecessaryFinal:OFF \
+                  -Xep:Var:OFF \
+                  -Xep:Varifier:OFF</arg>
               </compilerArgs>
               <annotationProcessorPaths>
                 <path>
